[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/TabButton.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "pressed"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[node name="TabButton" type="TextureButton"]
pause_mode = 2
margin_right = 96.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Touch" type="AudioStreamPlayer" parent="."]

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/pressed = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "关卡"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_rect_changed" from="." to="." method="_on_CustomTextureButton_item_rect_changed"]
[connection signal="pressed" from="." to="." method="_on_CustomTextureButton_pressed"]
[connection signal="toggled" from="." to="." method="_on_TabButton_toggled"]
